<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:columnCount="4">

    <TextView
        android:id="@+id/text_iteration_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_gravity="end"
        android:textSize="@dimen/field_text_small" />

    <TextView
        android:id="@+id/text_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_gravity="fill"
        android:textSize="@dimen/field_text" />

    <Button
        android:id="@+id/button_clear"
        style="@style/button_dark_orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_clear"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_percent"
        style="@style/button_light_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_percent"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_plus_minus"
        style="@style/button_light_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_plus_minus"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_div"
        style="@style/button_orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_div"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_1"
        style="@style/button_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_1"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_2"
        style="@style/button_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_2"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_3"
        style="@style/button_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_3"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_mult"
        style="@style/button_orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_mult"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_4"
        style="@style/button_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_4"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_5"
        style="@style/button_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_5"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_6"
        style="@style/button_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_6"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_sub"
        style="@style/button_orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_sub"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_7"
        style="@style/button_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_7"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_8"
        style="@style/button_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_8"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_9"
        style="@style/button_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_9"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_add"
        style="@style/button_orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_0"
        style="@style/button_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_0"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_point"
        style="@style/button_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_point"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_delete"
        style="@style/button_light_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_delete"
        android:textSize="@dimen/button_text" />

    <Button
        android:id="@+id/button_result"
        style="@style/button_dark_orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_result"
        android:textSize="@dimen/button_text" />
</GridLayout>
